Attempt to fix mobile gap on Home Page 4

--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -1,6 +1,5 @@
 .container {
   background-color: #d2e0e2;
-  vertical-align: top;
   width: 100%;
   overflow-x: hidden;
 }
